--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.13'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.0.4' apply false
     id 'com.android.library' version '7.0.4' apply false
@@ -8,3 +14,4 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
