--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.mapforgirls.MainActivity"/>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".SignupActivity"/>
         <activity android:name=".TestActivity"/>
         <activity android:name=".InfoDetailActivity"/>
