update fragment_columns.xml -> 레이아웃 수정 + 오류 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name="com.example.mapforgirls.MainActivity">
         </activity>
         <activity android:name=".TestActivity"/>
-        <activity android:name=".InfoDetailActivity"/>
+        <activity android:name=".ColumnDetailActivity"/>
     </application>
 
 </manifest>
