--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MapForGirls">
 
-        <!--android:name=".MainActivity"-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDI_qpv6fN1MOybVyooVDSzFo3ukcARXgw" />
+
+        <!-- android:name=".MainActivity" -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -20,11 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".SignupActivity"/>
-        <activity android:name=".FindpwActivity"/>
-        <activity android:name=".TestActivity"/>
-        <activity android:name=".ColumnDetailActivity"/>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".FindpwActivity" />
+        <activity android:name=".TestActivity" />
+        <activity android:name=".ColumnDetailActivity" />
     </application>
 
 </manifest>
