--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.0.4' apply false
     id 'com.android.library' version '7.0.4' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.0' apply false
 }
 
 task clean(type: Delete) {
