--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".FindpwActivity" />
+        <activity android:name=".UserActivity" />
+        <activity android:name=".CertifyActivity" />
         <activity android:name=".TestActivity" />
         <activity android:name=".ColumnDetailActivity" />
     </application>
