--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.2.2'
     implementation 'com.google.firebase:firebase-firestore:24.2.2'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
+    implementation 'androidx.test:core-ktx:1.4.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -76,4 +77,7 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.3'
     implementation 'androidx.room:room-runtime:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0' // Circle ImageView
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
