--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,9 @@
             android:value="AIzaSyDI_qpv6fN1MOybVyooVDSzFo3ukcARXgw" />
 
         <!-- android:name=".MainActivity" -->
-        <activity android:name="com.example.mapforgirls.SplashActivity"
-            android:exported="true">
+        <!--<activity android:name="com.example.mapforgirls.SplashActivity"
+            android:exported="true">-->
+        <activity android:name=".LoginActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +29,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".LoginActivity" android:exported="true"/>
+
+        <!--<activity android:name=".LoginActivity" android:exported="true"/>-->
         <activity android:name=".MainActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".FindpwActivity" />
@@ -36,6 +38,7 @@
         <activity android:name=".CertifyActivity" />
         <activity android:name=".TestActivity" />
         <activity android:name=".ColumnDetailActivity" />
+        <activity android:name=".ProfileActivity" />
 
 
     </application>
