--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,8 @@
             android:value="AIzaSyDI_qpv6fN1MOybVyooVDSzFo3ukcARXgw" />
 
         <!-- android:name=".MainActivity" -->
-        <!--<activity android:name="com.example.mapforgirls.SplashActivity"
-            android:exported="true">-->
-        <activity android:name=".LoginActivity" android:exported="true">
+        <activity android:name="com.example.mapforgirls.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +29,7 @@
         </activity>
 
 
-        <!--<activity android:name=".LoginActivity" android:exported="true"/>-->
+        <activity android:name=".LoginActivity" android:exported="true"/>
         <activity android:name=".MainActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".FindpwActivity" />
