--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.3'
     implementation 'androidx.room:room-runtime:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
+    implementation 'androidx.room:room-common:2.4.3'
+
 
     implementation 'de.hdodenhof:circleimageview:3.1.0' // Circle ImageView
     implementation 'com.github.bumptech.glide:glide:4.11.0'
