--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".ui.main.columns.ColumnDetailActivity" />
         <activity android:name=".ui.main.chatting.ChattingDetailActivity"/>
         <activity android:name=".ui.test.TestResultActivity"/>
+        <activity android:name=".IntroduceActivity"/>
 
     </application>
 
